--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
             </a>
             <!-- Splits columns into 2 thirds -->
             <div class="col-md-8">
-
+                <div class="row bg-color-name-title">
+                    <!-- div class of col must always follow 'row' -->
+                    <div class="col heading">
+                        <h1 class="name">Christopher Parry</h1>
+                        <h2 class="title">Junior Full Stack Developer</h2>
+                    </div>
+                </div>
             </div>
+            <!-- Username and title -->
+            
         </div>
         
     </header>
