--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     
     <!-- Container fluid makes it full width flexible container, sm-4 to create a block of 3 -->
     <footer class="container-fluid">
-        <div class="row">
+        <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Home</h5>
                 <p class="inline-block">
