--- a/resume.html
+++ b/resume.html
@@ -56,18 +56,7 @@
         </div>
         
     </header>
-    <!-- Contact details and reasons to hire me -->
-    <section class="container-fluid">
-        <div class="row row-table">
-    <!-- Section-column gives specifies column cell that gives evenly spaced columns in terms of height etc -->
-            <div class="col-md-8 bg-color-three-reasons section-column">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>
-                    </div>
-                </div>
-            </div>
-         </div>
+    <section>
 
     </section>
     
