Personal Info section added, however it looks wrong

--- a/index.html
+++ b/index.html
@@ -58,66 +58,64 @@
     </header>
     <!-- Contact details and reasons to hire me -->
     <section class="container-fluid">
-        <div class="row">
-    <!-- col-md-4 above 'three reasons' so that the column appears on the left -->
-    <!-- Personal Information Section -->
-            <div class="col-md-4 bg-color-personal-info section-column">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h3 class="section-heading uppercase">
-                            Personal Info
-                        </h3>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Name:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            Christopher Parry
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Address:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            38 Vyrnwy Road, Saltney, Chester, CH4 8QW
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Phone:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            07476 647826
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Email:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            chrisparry07@live.co.uk
-                        </p>
-                    </div>
+    <div class="row">
+       <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="section-heading uppercase">
+                        Personal Info
+                    </h3>
                 </div>
             </div>
+            <div class="personal-info-item">
+                <div class="key">
+                    <p class="uppercase">
+                        Name:
+                    </p>
+                </div>
+            <div class="value">
+                    <p>
+                        Christopher Parry
+                    </p>
+            </div>
+            </div>
+            <div class="personal-info-item">
+                <div class="key">
+                    <p class="uppercase">
+                        Address:
+                    </p>
+                </div>
+            <div class="value">
+                    <p>
+                        38 Vyrnwy Road, Chester, CH4 8QW
+                    </p>
+            </div>
+            </div>
+            <div class="personal-info-item">
+                <div class="key">
+                    <p class="uppercase">
+                        Phone:
+                    </p>
+                </div>
+            <div class="value">
+                    <p>
+                        07476 647826
+                    </p>
+            </div>
+            </div>
+            <div class="personal-info-item">
+                <div class="key">
+                    <p class="uppercase">
+                        Email:
+                    </p>
+                </div>
+            <div class="value">
+                    <p>
+                        chrisparry07@live.co.uk
+                    </p>
+            </div>
+            </div>
+     </div>
     <!-- Section-column gives specifies column cell that gives evenly spaced columns in terms of height etc -->
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
