--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
         <!-- No gutters class removes all opening spaces -->
         <div class="row no-gutters">
             <!-- Splits columns into 1 3rd of page a tag must follow a row and logo tag added -->
-            <a href="resume.html" class="col-md-4 logo">
+            <a href="index.html" class="col-md-4 logo">
 
             </a>
             <!-- Splits columns into 2 thirds -->
@@ -35,13 +35,13 @@
                         <ul id="nav" class="list-inline menucontainer">
                             <!-- Viewed on 4 sections on larger screen, 2 on mobile -->
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
                                 <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
@@ -62,7 +62,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h3 class="section-heading uppercase">
-                            Personal Info
+                            Work History
                         </h3>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                 <div class="col-md-8 bg-color-three-reasons section-column">
                     <div class="row">
                         <div class="col">
-                            <h3 class="section-heading uppercase">About Me</h3>
+                            <h3 class="section-heading uppercase">My Skills</h3>
                         </div>
                     </div>
                     <div class="row">
@@ -79,13 +79,13 @@
                         <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                             <div class="row">
                                 <div class="col-2">
-                                    <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                                    <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10">
-                                    <h4 class="three-reasons-heading uppercase">What do I do</h4>
+                                    <h4 class="three-reasons-heading uppercase">Front End</h4>
                                     <p>
-                                        I'm a skilled Full Stack Developer with a wealth of diverse
-                                        life and technical experience that I bring to every project.
+                                        I'm a skilled in User Experience Design using the trinity of HTML / CSS / JavaScript. 
+                                        I also extensive experience in Front End Frameworks such as Angular and React.
                                     </p>
                                 </div>
                             </div>
@@ -93,18 +93,55 @@
                         <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                             <div class="row">
                                 <div class="col-2">
-                                    <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                                    <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10">
-                                    <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                    <h4 class="three-reasons-heading uppercase">Back End</h4>
                                     <p>
-                                        I follow form as well as function. I know the aesthetics of an effective
-                                        design combined with application speed, security and reliability combine to
-                                        create a great user experience.
+                                        I specialise in data-driven web applications. Many of my projects utilise
+                                        document-based data. I use Django and Python in conjunction with MongoDB
+                                        to process and present information.
                                     </p>
                                 </div>
                             </div>
                         </div>
+                   
+                    </div>
+                    <div class="row pogress-section">
+                        <div class="col">
+        <!-- Progress bar using bootstrap -->
+                            <div class="progress">
+                                <div class="progress-bar" role="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                    <splan class="sr-only">90% complete</splan>
+                                </div>
+                                <span class="progress-type">HTML / HTML5</span>
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar bg-success" role="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                    <splan class="sr-only">80% complete</splan>
+                                </div>
+                                <span class="progress-type">CSS / CSS3</span>
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar bg-info" role="progress-bar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                    <splan class="sr-only">70% complete</splan>
+                                </div>
+                                <span class="progress-type">JavaScript / jQuery</span>
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar bg-warning" role="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                    <splan class="sr-only">80% complete</splan>
+                                </div>
+                                <span class="progress-type">Django / Python</span>
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar bg-danger" role="progress-bar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                                    <splan class="sr-only">85% complete</splan>
+                                </div>
+                                <span class="progress-type">SQL / NoSQL</span>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
              </div>
