Contact page added and styled

--- a/resume.html
+++ b/resume.html
@@ -67,6 +67,7 @@
                     </h3>
                 </div>
             </div>
+            <div class="history-items">
             <div class="timeline-item" data-dates="08/2023 - 05/2024">
                 <h4>Amazon DWN2 Knowsley (AFS Logistics Ltd)</h4>
                 <p>Site Manager</p>
@@ -79,6 +80,11 @@
                 <h4>Gist Ltd</h4>
                 <p>Warehouse Manager</p>
             </div>
+            <div class="timeline-item" data-dates="06/2004 - 11/2010">
+                <h4>Intercare Distribution Services Ltd</h4>
+                <p>Operations Manager</p>
+            </div>
+        </div>
      </div>
     <!-- Section-column gives specifies column cell that gives evenly spaced columns in terms of height etc -->
             <div class="col-md-8 bg-color-three-reasons section-column">
