--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                                <a href="/assets/cv/Christopher Parry - CV2.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
 
                         </ul>
@@ -180,7 +180,7 @@
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
     <!-- _blank navigates to external page -->
-                    <a href="#" target="_blank" class="cv-pdf">
+                    <a href="/assets/cv/Christopher Parry - CV2.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
     <!-- sr-only is 'screenreader only' and will not appear on the browser -->
                         <span class="sr-only">Download Link</span>
