--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
     <!-- _blank navigates to external page -->
-                    <a href="#" target="_blank" class="cv-pdf">
+                    <a href="/assets/cv/Christopher Parry - CV2.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
     <!-- sr-only is 'screenreader only' and will not appear on the browser -->
                         <span class="sr-only">Download Link</span>
